add_subdirectory(benchmarkIPScaling)
add_subdirectory(benchmarkMemcpy)
add_subdirectory(nullspace)

add_subdirectory(helloWorld)
add_subdirectory(raytracing)
add_subdirectory(ini)
add_subdirectory(threadPool)
add_subdirectory(randomNumbers)
add_subdirectory(imageProcessing)
add_subdirectory(fractals)
add_subdirectory(filesystem)
add_subdirectory(openmp)
#if(SAIGA_USE_FREEIMAGE)
#add_subdirectory(raw2hdr)
#endif()




